crates/hir-ty/tests/snapshots/resolve_type_snapshots__unknown_broken_import_blocks_fallthrough.snap
---
source: crates/hir-ty/tests/resolve_type_snapshots.rs
expression: out
---
FILE /src/com/example/App.java:
package com.example;

import org.missing.Thing;

class App {
    Thing field;
}

method : cannot-resolve-type: @5:4Cannot resolve symbol 'Thing'
method : unresolved-import: @2:0Cannot resolve symbol 'org.missing.Thing' in the single-type import
